fix: wave not showing correctly on the blog

--- a/assets/css/pages/_blog.scss
+++ b/assets/css/pages/_blog.scss
@@ -104,7 +104,8 @@
 .blog-single__body.has-video {
   color: var(--color-inversed);
 
-  iframe ~ * {
+  iframe ~ *,
+  lazy-video ~ * {
     color: var(--color);
   }
 }
